--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,29 @@
+@font-face {
+  font-family: Hatolie;
+  src: url("../src/assets/fonts/Hatolie.ttf");
+}
+@font-face {
+  font-family: Montserrat-Bold;
+  src: url("../src/assets/fonts/Montserrat-Bold.ttf");
+}
+@font-face {
+  font-family: Kugile;
+  src: url("../src/assets/fonts/Kugile_Demo.ttf");
+}
+@font-face {
+  font-family: Poppins;
+  src: url("../src/assets/fonts/poppins.semibold-italic.ttf");
+}
+
+body {
+  @apply bg-white;
+}
+
 @import "tailwindcss";
+
+@theme {
+  --font-hatolie: Hatolie, "sans-serif";
+  --font-monserrat-bold: Monserrat-Bold, "sans-serif";
+  --font-kugile: Kugile, "sans-serif";
+  --font-poppins: Poppins, "sans-serif";
+}
